--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <p>Welcome to my website!</p>
 
   <div class="grid-container">
-  <div class="item1">Header</div>
+  <div class="item1">Nokia</div>
   <div class="item2">Menu</div>
   <div class="item3">Main</div>  
   <div class="item4">Right</div>
