--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   <p>Welcome to my website!</p>
 
   <div class="grid-container">
-  <div class="item1">Nokia</div>
-  <div class="item2">Menu</div>
-  <div class="item3">Main</div>  
-  <div class="item4">Right</div>
-  <div class="item5">Footer</div>
+  <div class="item1">Premier League</div>
+  <div class="item2">History</div>
+  <div class="item3">Champions</div>  
+  <div class="item4">FFP</div>
+  <div class="item5">Football Pyramid</div>
 </div>
 </body>
 
