--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 
   <div class="grid-container">
   <div class="item1">Premier League</div>
-  <div class="item2">History</div>
-  <div class="item3">Champions</div>  
+  <div class="item2">History
+  <p>The premier league was founded in February 1992. It broke away from the English Football League which had begun in 1888. </p></div>
+  <div class="item3">Champions
+  <p> There have been 8 different teams that have won the Premier League. Leeds United, Manchester United, Blackburn Rovers, Arsenal, Chelsea, Manchester city, Leicester and Liverpool.</p></div>  
   <div class="item4">FFP</div>
   <div class="item5">Football Pyramid</div>
 </div>
