--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
   <div class="item3">Champions
   <p> There have been 8 different teams that have won the Premier League. Leeds United, Manchester United, Blackburn Rovers, Arsenal, Chelsea, Manchester city, Leicester and Liverpool.</p></div>  
   <div class="item4">FFP</div>
-  <div class="item5">Football Pyramid</div>
+  <div class="item5">Football Pyramid
+  There are 57 different leagues in England. The top 4 are the biggest and most viewed. This is the Premier League, Championship, League 1 and League 2. The bottom teams from each league are demoted and the top teams are promoted.</div>
 </div>
 </body>
 
