--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
   <p>The premier league was founded in February 1992. It broke away from the English Football League which had begun in 1888. </p></div>
   <div class="item3">Champions
   <p> There have been 8 different teams that have won the Premier League. Leeds United, Manchester United, Blackburn Rovers, Arsenal, Chelsea, Manchester city, Leicester and Liverpool.</p></div>  
-  <div class="item4">FFP</div>
+  <div class="item4">Competitions
+  <p> There are 2 domestic cup competitions in England. The FA Cup and the Carabao Cup. Teams can also qualify for European football and play in the Champions League, Europa League or Confrence League.</p></div>
   <div class="item5">Football Pyramid
-  There are 57 different leagues in England. The top 4 are the biggest and most viewed. This is the Premier League, Championship, League 1 and League 2. The bottom teams from each league are demoted and the top teams are promoted.</div>
+  <p>There are 57 different leagues in England. The top 4 are the biggest and most viewed. This is the Premier League, Championship, League 1 and League 2. The bottom teams from each league are demoted and the top teams are promoted.</p></div>
 </div>
 </body>
 
