--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     'menu main main main right right'
     'menu footer footer footer footer footer';
   gap: 10px;
-  background-color: #2196F3;
+  background-color: grey;
   padding: 10px;
 }
 
