--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
   <div class="grid-container">
   <div class="item1">Premier League</div>
+    <img src="pl.jpg" alt="Pl" width="500" height="333">
   <div class="item2">History
   <p>The premier league was founded in February 1992. It broke away from the English Football League which had begun in 1888. </p></div>
   <div class="item3">Champions
