--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <body>
   <h1>Ville Palo</h1>
   <p>Welcome to my website!</p>
+  <img src="Pl2.jpg" alt="Premier league2" width="500" height="333">
 
   <div class="grid-container">
   <div class="item1">Premier League</div>
