--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 <body>
   <h1>Ville Palo</h1>
   <p>Welcome to my website!</p>
-  <img src="Pl2.jpg" alt="Premier league2" width="400" height="333">
+  <img src="/pictures/Pl2.jpg" alt="Premier league2" width="400" height="333">
 
   <div class="grid-container">
   <div class="item1">Premier League</div>
-    <img src="pl.jpg" alt="Premier league" width="400" height="333">
+    <img src="/pictures/pl.jpg" alt="Premier league" width="400" height="333">
   <div class="item2">History
   <p>The premier league was founded in February 1992. It broke away from the English Football League which had begun in 1888. </p></div>
   <div class="item3">Champions
