--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+  <title>Premier League</title>
+ </head>
 <style>
 .item1 { grid-area: header; }
 .item2 { grid-area: menu; }
